--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
-h1 {
-	color: red
-}
 h2 {
 	margin-top: 20px;
 	margin-bottom: 10px;
 	font-size: 50px;
 	color: green
+}
+button {
+	background-color: darkblue;
+	color: gold;
+	font-size: 25px;
+}
+label {
+	font-size: 30px;
+}
+input {
+	height: 30px;
+	font-size: 30px;
 }
 #title {
 	background-color: orange;
